<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editValue1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="number"
        android:hint="@string/firstHint"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/editValue1">

        <RadioButton
            android:id="@+id/radioAddition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAddition"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radioSubtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSubtraction"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radioMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strMultiplication"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radioDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strDivision"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </RadioGroup>

    <EditText
        android:id="@+id/editValue2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:hint="@string/secondHint"/>

    <Button
        android:id="@+id/btnCalculator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editValue2"
        android:text="@string/btnCalculationString"/>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultString"
        android:layout_marginTop="24dp"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalculator" />

</androidx.constraintlayout.widget.ConstraintLayout>